feat: adds employee to company
